# drugucopia-app

./: .gitignore  .gitmodules  CHANGELOG.md  TAURI_README.md  jest.config.ts  jest.setup.tsx  next.config.ts  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: new-substance-request.md
.github/workflows/: deploy.yml  release.yml
public/: manifest.webmanifest  sw.js
scripts/: android.sh  extract-changelog.js  patch-android.sh  setup-android.sh  tauri-server.js
scripts/android-ongoing-notif/: OngoingNotificationHelper.kt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ongoing.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: active-doses-timeline.tsx  active-reminders.tsx  alcohol-calculator-fields.tsx  changelog-popup-wrapper.tsx  changelog-popup.tsx  command-palette-types.ts  command-palette.tsx  dose-history.tsx  dose-logger-modal.tsx  dose-stats.tsx  duration-override-fields.tsx  edit-dose-modal.tsx  error-boundary.tsx  estimated-duration-badge.tsx  intensity-timeline-chart.tsx  interaction-pair-card.tsx  interaction-results.tsx  interaction-substance-selector.tsx  milkdrop-background-wrapper.tsx  milkdrop-background.tsx  onboarding-tour.tsx  redose-planner.tsx  reminder-provider.tsx  reminder-settings.tsx  sync-conflicts.tsx  theme-provider.tsx  theme-toggle.tsx  timeline-notification-settings.tsx  update-check-popup-wrapper.tsx  update-check-popup.tsx  visualizer-controls.tsx
src/hooks/: use-toast.ts  (+1 more)
(+125 files in other folders)
