[package]
name = "drugucopia"
version = "0.2.0"
description = "Drugucopia - Dose Logger and Substance Resources"
authors = ["conflictmedia"]
edition = "2021"

[lib]
name = "drugucopia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
